--- a/src/course-test-completed.html
+++ b/src/course-test-completed.html
@@ -43,16 +43,16 @@
         <div class="section-nav__links">
 
           <a href="#" class="section-nav__back btn btn--icon btn--back">
-            <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
-            <span class="btn-text">Back to course</span>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg>
+            Back to course
           </a>
 
           <div class="section-nav__btns">
-            <a href="#" class="course-section__head-arrow btn btn--arrow"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
+            <a href="#" class="course-section__head-arrow btn btn--arrow"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg></a>
 
             <a href="#" class="section-nav__next btn btn--icon btn--next">
-              <span class="btn-text">Next section</span>
-              <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+              Next section
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg>
             </a>
           </div>
 
@@ -136,8 +136,8 @@
                 </div>
                 <div class="test-complete__links">
                   <a href="#" class="btn btn--icon btn--next btn--green">
-                    <span class="btn-text">Next section</span>
-                    <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+                    Next section
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg>
                   </a>
                   <p class="test-complete__next-text">Next section: <a href="#" class="test-complete__next-link">Aero Engines</a></p>
                 </div>
@@ -214,8 +214,8 @@
                 <div class="section-nav section-nav--test section-nav--complete">
                   <p class="section-nav__next-text">Next section: <a href="#" class="section-nav__next-link">Aero Engines</a></p>
                   <a href="#" class="btn btn--icon btn--next btn--green">
-                    <span class="btn-text">Next section</span>
-                    <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+                    Next section
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg>
                   </a>
                 </div>
 
@@ -303,8 +303,8 @@
                 </div>
                 <div class="test-complete__links">
                   <a href="#" class="btn btn--icon btn--next btn--green">
-                    <span class="btn-text">Next section</span>
-                    <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+                    Next section
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9.932 10.192"><path d="M9.932 4.666a.65.65 0 0 0-.65-.65H3.885l2.29-2.29a.656.656 0 0 0 0-.923L5.56.19a.656.656 0 0 0-.922 0L.19 4.636a.652.652 0 0 0 0 .92l4.448 4.447a.656.656 0 0 0 .923 0l.615-.615a.656.656 0 0 0 0-.923l-2.29-2.28h5.392c.36 0 .65-.292.65-.65l.005-.87z" /></svg>
                   </a>
                   <p class="test-complete__next-text">Next section: <a href="#" class="test-complete__next-link">Aero Engines</a></p>
                 </div>
