--- a/src/course.html
+++ b/src/course.html
@@ -113,8 +113,7 @@
               <a class="course-sections__link">
                 <span class="course-sections__item-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z"/></svg>
-                </span>
-                <span class="course-sections__item-title">Winds and temps</span>
+                </span>Winds and temps
               </a>
               <div class="course-sections__item-time tablet-hide">42 min</div>
               <ul class="course-sections__media-list tablet-hide">
@@ -132,8 +131,7 @@
               <a class="course-sections__link">
                 <span class="course-sections__item-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
-                </span>
-                <span class="course-sections__item-title">Turbulence forcasts</span>
+                </span>Turbulence forcasts
               </a>
               <div class="course-sections__item-time tablet-hide">2 hrs</div>
               <ul class="course-sections__media-list tablet-hide">
@@ -156,8 +154,7 @@
               <a class="course-sections__link">
                 <span class="course-sections__item-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
-                </span>
-                <span class="course-sections__item-title">Icing</span>
+                </span>Icing
               </a>
               <div class="course-sections__item-time tablet-hide">24 min</div>
               <ul class="course-sections__media-list tablet-hide">
@@ -175,8 +172,7 @@
               <a class="course-sections__link">
                 <span class="course-sections__item-icon">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
-                </span>
-                <span class="course-sections__item-title">Experimental Grapical Forecasts</span>
+                </span>Experimental Grapical Forecasts
               </a>
               <div class="course-sections__item-time tablet-hide">40 min</div>
               <ul class="course-sections__media-list tablet-hide">
@@ -199,8 +195,7 @@
               <a class="course-sections__link">
                 <span class="course-sections__item-icon course-sections__item-icon--test">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
-                </span>
-                <span class="course-sections__item-title">Experimental Grapical Forecasts</span>
+                </span>Experimental Grapical Forecasts
               </a>
               <div class="course-sections__item-time tablet-hide">40 min</div>
             </div>
