Added course-preview block to profile.html with course title as a link

--- a/src/courses.html
+++ b/src/courses.html
@@ -83,7 +83,7 @@
           <div class="courses-list__sub-title text-right">progress</div>
         </div>
       </header>
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
           <a href="#" class="course-preview__image course-preview__image--success">
@@ -110,7 +110,7 @@
         </div>
       </div>
 
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
           <a href="#" class="course-preview__image course-preview__image--success">
@@ -137,7 +137,7 @@
         </div>
       </div>
 
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
           <a href="#" class="course-preview__image">
@@ -164,7 +164,7 @@
         </div>
       </div>
 
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
           <a href="#" class="course-preview__image">
