--- a/src/profile.html
+++ b/src/profile.html
@@ -93,16 +93,16 @@
           <div class="courses-list__sub-title text-right">progress</div>
         </div>
       </header>
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
-          <div class="course-preview__image">
+          <a href="#" class="course-preview__image course-preview__image--success">
             <img src="img/course-bg-1.jpg" alt="">
-          </div>
+          </a>
         </div>
         <div class="course-preview__col course-preview__col--2">
           <div class="course-preview__col course-preview__col--2-1">
-            <h3 class="course-preview__title">3496 Aviation Weather Forecasts course</h3>
+            <a href="#" class="course-preview__title">3496 Aviation Weather Forecasts course</a>
             <p class="course-preview__about">Obligatory, every year</p>
           </div>
           <div class="course-preview__col course-preview__col--2-2 mobile-hide">
@@ -120,16 +120,16 @@
         </div>
       </div>
 
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
-          <div class="course-preview__image">
+          <a href="#" class="course-preview__image course-preview__image--success">
             <img src="img/course-bg-1.jpg" alt="">
-          </div>
+          </a>
         </div>
         <div class="course-preview__col course-preview__col--2">
           <div class="course-preview__col course-preview__col--2-1">
-            <h3 class="course-preview__title">3006 Abbreviations and Symbols course</h3>
+            <a href="#" class="course-preview__title">3006 Abbreviations and Symbols course</a>
             <p class="course-preview__about">Obligatory, every year</p>
           </div>
           <div class="course-preview__col course-preview__col--2-2 mobile-hide">
@@ -147,16 +147,16 @@
         </div>
       </div>
 
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
-          <div class="course-preview__image">
+          <a href="#" class="course-preview__image">
             <img src="img/course-bg-2.jpg" alt="">
-          </div>
+          </a>
         </div>
         <div class="course-preview__col course-preview__col--2">
           <div class="course-preview__col course-preview__col--2-1">
-            <h3 class="course-preview__title">3582 Radio Navigation course</h3>
+            <a href="#" class="course-preview__title">3582 Radio Navigation course</a>
             <p class="course-preview__about">Elective, every year <span class="text-success">repeat until 26.03.2017</span></p>
           </div>
           <div class="course-preview__col course-preview__col--2-2 mobile-hide">
@@ -174,16 +174,16 @@
         </div>
       </div>
 
-      <!-- курс -->
+      <!-- course -->
       <div class="course-preview">
         <div class="course-preview__col course-preview__col--1">
-          <div class="course-preview__image">
+          <a href="#" class="course-preview__image">
             <img src="img/course-bg-1.jpg" alt="">
-          </div>
+          </a>
         </div>
         <div class="course-preview__col course-preview__col--2">
           <div class="course-preview__col course-preview__col--2-1">
-            <h3 class="course-preview__title">3247 The Pitot Static System and Associated Instruments  course and Associated</h3>
+            <a href="#" class="course-preview__title">3247 The Pitot Static System and Associated Instruments course and Associated</a>
             <p class="course-preview__about">Elective, every 2 years <span class="text-danger">repeat until 26.03.2017</span></p>
           </div>
           <div class="course-preview__col course-preview__col--2-2 mobile-hide">
