--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
       <li><a href="about.html">About</a></li>
       <li><a href="help.html">Help</a></li>
       <li><a href="messages.html">Messages</a></li>
+      <li><a href="message-form.html">Leave us a message</a></li>
     </ul>
   </div>
 
