added page "leave us a message"

--- a/src/course-section.html
+++ b/src/course-section.html
@@ -195,7 +195,7 @@
                         </div>
                         <form class="forum__comment-answer">
                           <textarea rows="3"></textarea>
-                          <input type="submit" value="Submit" class="btn btn--forum btn--forum-submit">
+                          <input type="submit" value="Submit" class="btn btn--forum btn--submit">
                         </form>
                       </div>
                     </div>
