--- a/src/messages.html
+++ b/src/messages.html
@@ -84,7 +84,7 @@
                 <label for="ch6" class="checkbox__label">Information</label>
               </div>
             </fieldset>
-            <button type="submit" class="btn btn--forum-submit">Show result</button>
+            <button type="submit" class="btn btn--submit">Show result</button>
           </form>
         </section>
       </aside>
