--- a/src/restore.html
+++ b/src/restore.html
@@ -20,7 +20,7 @@
             <input type="email" id="mail">
           </div>
           <div class="form__row">
-            <button type="submit" class="btn btn--submit">Log in</button>
+            <button type="submit" class="btn btn--login-submit">Log in</button>
           </div>
           <div class="form__row">
             <a href="login.html" class="form__link">Log in</a>
