--- a/src/login.html
+++ b/src/login.html
@@ -29,7 +29,7 @@
             <label for="remember" class="checkbox__label">Remember me</label>
           </div>
           <div class="form__row">
-            <button type="submit" class="btn btn--submit">Log in</button>
+            <button type="submit" class="btn btn--login-submit">Log in</button>
           </div>
         </form>
       </div>
