--- a/src/about.html
+++ b/src/about.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-6 col-xs-12">
           <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
@@ -36,13 +36,13 @@
   </header>
 
   <div class="page-header">
-    <div class="container container--small">
+    <div class="container">
       <h1 class="page-header__title">About</h1>
       <p class="page-header__description">Version 1.1.3 beta, released 3/2/2016</p>
     </div>
   </div>
 
-  <div class="page container container--small">
+  <div class="page container">
     <div class="row">
       <div class="col-md-7 col-sm-12 col-xs-12">
         <p>Educational technology is the effective use of technological tools in learning. As a concept, it concerns an array of tools, such as media, machines and networking hardware, as well as considering underlying theoretical perspectives for their effective application.[1][2] </p>
@@ -60,7 +60,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
