--- a/src/courses.html
+++ b/src/courses.html
@@ -11,7 +11,7 @@
 
   <div class="page-header page-header--with-tab">
     <header class="header header--transparent">
-      <div class="container container--small">
+      <div class="container">
         <div class="row">
           <div class="col-md-6 col-xs-12">
             <div class="logo logo--dark">Online <span class="logo__second">Learning System</span></div>
@@ -36,7 +36,7 @@
       </div>
     </header>
 
-    <div class="container container--small">
+    <div class="container">
       <div class="user-courses">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12">
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="container container--small">
+  <div class="container">
     <section class="courses-list">
       <header class="courses-list__header mobile-hide">
         <div class="courses-list__col courses-list__col--1">
@@ -194,7 +194,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
