--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="container container--small">
+  <div class="container">
     <ul>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="course.html">Course page</a></li>
