--- a/src/course.html
+++ b/src/course.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <div class="container container--small">
+    <div class="container">
       <div class="row">
         <div class="col-md-6 col-xs-12">
           <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
@@ -38,7 +38,7 @@
   <div class="course">
 
     <div class="course-about">
-      <div class="container container--small">
+      <div class="container">
         <div class="announce-alert">
           <div class="announce-alert__thumb mobile-hide">
             <img src="img/student-photo-thumb.jpg" alt="">
@@ -106,7 +106,7 @@
     </div>
 
     <div class="course-info js-tab-container">
-      <div class="container container--small">
+      <div class="container">
         <div class="course-sections js-tab js-tab--active">
           <div class="course-sections__item-wrap course-sections__item-wrap--passed">
             <div class="course-sections__item">
@@ -277,7 +277,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container container--small">
+    <div class="container">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
