added plus button in header-menu

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,8 @@
       <li><a href="help.html">Help</a></li>
       <li><a href="messages.html">Messages</a></li>
       <li><a href="message-form.html">Leave us a message</a></li>
+      <li>ADMIN</li>
+      <li><a href="courses-admin.html">Courses</a></li>
     </ul>
   </div>
 
