--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,9 @@
       <li><a href="messages.html">Messages</a></li>
       <li><a href="message-form.html">Leave us a message</a></li>
       <li>ADMIN</li>
-      <li><a href="courses-admin.html">Courses</a></li>
+      <!-- <li><a href="courses-admin.html">Courses</a></li> -->
+      <li><a href="profile-admin.html">Profile</a></li>
+      <li><a href="instructors.html">Instructors</a></li>
     </ul>
   </div>
 
