--- a/src/course.html
+++ b/src/course.html
@@ -10,12 +10,12 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="container container--small">
       <div class="row">
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
         </div>
-        <div class="col-md-8 col-xs-12 header__menu">
+        <div class="col-md-9 col-xs-12 header__menu">
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
@@ -38,9 +38,9 @@
   <div class="course">
 
     <div class="course-about">
-      <div class="container">
+      <div class="container container--small">
         <div class="announce-alert">
-          <div class="announce-alert__thumb mobile-hide">
+          <div class="announce-alert__thumb">
             <img src="img/student-photo-thumb.jpg" alt="">
           </div>
           <div class="announce-alert__text">2 Section added and 2 tests. Please, complete sections and tests <span class="announce-alert__date">24.02 2016</span></div>
@@ -106,7 +106,7 @@
     </div>
 
     <div class="course-info js-tab-container">
-      <div class="container">
+      <div class="container container--small">
         <div class="course-sections js-tab js-tab--active">
           <div class="course-sections__item-wrap course-sections__item-wrap--passed">
             <div class="course-sections__item">
@@ -272,7 +272,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container">
+    <div class="container container--small">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
