--- a/src/courses-admin.html
+++ b/src/courses-admin.html
@@ -10,12 +10,12 @@
 <body>
 
   <header class="header header--admin">
-    <div class="container">
+    <div class="container container--small">
       <div class="row">
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
         </div>
-        <div class="col-md-8 col-xs-12 header__menu">
+        <div class="col-md-9 col-xs-12 header__menu">
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
@@ -44,7 +44,7 @@
     </div>
   </header>
 
-    <div class="container">
+    <div class="container container--small">
       <div class="user-courses">
         <div class="row">
           <div class="col-md-6 col-sm-6 col-xs-12">
@@ -75,7 +75,7 @@
     </div>
 
 
-  <div class="container">
+  <div class="container container--small">
     <section class="courses-list">
       <header class="courses-list__header mobile-hide">
         <div class="courses-list__col courses-list__col--1">
@@ -202,7 +202,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container">
+    <div class="container container--small">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
