--- a/src/help.html
+++ b/src/help.html
@@ -10,12 +10,12 @@
 <body>
 
   <header class="header">
-    <div class="container">
+    <div class="container container--small">
       <div class="row">
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
         </div>
-        <div class="col-md-8 col-xs-12 header__menu">
+        <div class="col-md-9 col-xs-12 header__menu">
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
@@ -36,13 +36,13 @@
   </header>
 
   <div class="page-header">
-    <div class="container">
+    <div class="container container--small">
       <h1 class="page-header__title">Help</h1>
       <p class="page-header__description">Explore our help videos  to learn how to use the system </p>
     </div>
   </div>
 
-  <div class="page container">
+  <div class="page container container--small">
     <div class="row">
       <div class="col-md-7 col-sm-12 col-xs-12">
         <article class="collapse">
@@ -78,7 +78,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container">
+    <div class="container container--small">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
