--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="container container--small">
     <ul>
       <li><a href="courses.html">Courses</a></li>
       <li><a href="course.html">Course page</a></li>
@@ -28,6 +28,7 @@
       <li>ADMIN</li>
       <!-- <li><a href="courses-admin.html">Courses</a></li> -->
       <li><a href="profile-admin.html">Profile</a></li>
+      <li><a href="instructor.html">Instructor page</a></li>
       <li><a href="instructors.html">Instructors</a></li>
     </ul>
   </div>
