--- a/src/profile-admin.html
+++ b/src/profile-admin.html
@@ -10,12 +10,12 @@
 <body>
 
   <header class="header header--admin">
-    <div class="container">
+    <div class="container container--small">
       <div class="row">
-        <div class="col-md-4 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <div class="logo">Online <span class="logo__second">Learning System</span></div>
         </div>
-        <div class="col-md-8 col-xs-12 header__menu">
+        <div class="col-md-9 col-xs-12 header__menu">
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
@@ -40,12 +40,12 @@
           </nav>
         </div>
       </div>
-      <button type="button" class="header__toggle header__toggle--dark"><span>Menu toggle</span></button>
+      <button type="button" class="header__toggle"><span>Menu toggle</span></button>
     </div>
   </header>
 
   <section class="profile-view">
-    <div class="container">
+    <div class="container container--small">
       <div class="row">
         <div class="col-md-6 col-sm-9 col-xs-12">
           <div class="profile-view__image">
@@ -86,9 +86,9 @@
     </div>
   </section>
 
-  <div class="container">
+  <div class="container container--small">
     <section class="courses-list">
-      <header class="courses-list__header mobile-hide">
+      <header class="courses-list__header">
         <div class="courses-list__col courses-list__col--1">
           <h3 class="courses-list__title">Courses</h3>
         </div>
@@ -217,7 +217,7 @@
   </div>
 
   <footer class="footer">
-    <div class="container">
+    <div class="container container--small">
       <nav class="menu-footer">
         <ul class="menu-footer__list">
           <li class="menu-footer__item"><a href="index.html" class="menu-footer__link menu-footer__link--name">Sky Agency</a></li>
