added new component with bg-pattern, customized page-header for better using

--- a/src/course-section.html
+++ b/src/course-section.html
@@ -37,7 +37,7 @@
 
   <div class="course-section">
 
-    <div class="section-nav">
+    <div class="section-nav page-header">
       <div class="container container--small">
         <p class="section-nav__title">3496 Aviation Weather Forecasts course (5/11 completed)</p>
         <div class="section-nav__links">
