--- a/src/course.html
+++ b/src/course.html
@@ -37,7 +37,7 @@
 
   <div class="course">
 
-    <div class="course-about">
+    <div class="page-header page-header--course">
       <div class="container container--small">
         <div class="announce-alert">
           <div class="announce-alert__thumb">
