--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
       <li><a href="profile-admin.html">Profile</a></li>
       <li><a href="instructor.html">Instructor page</a></li>
       <li><a href="instructors.html">Instructors</a></li>
+      <li><a href="profile-edit.html">Profile edit</a></li>
     </ul>
   </div>
 
