--- a/src/messages.html
+++ b/src/messages.html
@@ -35,7 +35,7 @@
     </div>
   </header>
 
-  <div class="page-header">
+  <div class="page-header page-header--with-line">
     <div class="container container--small">
       <h1 class="page-header__title">Messages</h1>
       <p class="page-header__description status-text status-text--danger">2 unread messages</p>
