--- a/src/about.html
+++ b/src/about.html
@@ -35,7 +35,7 @@
     </div>
   </header>
 
-  <div class="page-header">
+  <div class="page-header page-header--with-line">
     <div class="container container--small">
       <h1 class="page-header__title">About</h1>
       <p class="page-header__description">Version 1.1.3 beta, released 3/2/2016</p>
