--- a/src/courses.html
+++ b/src/courses.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <div class="page-header page-header--with-tab">
+  <div class="page-header page-header--courses">
     <header class="header header--transparent">
       <div class="container container--small">
         <div class="row">
