--- a/src/help.html
+++ b/src/help.html
@@ -35,7 +35,7 @@
     </div>
   </header>
 
-  <div class="page-header">
+  <div class="page-header page-header--with-line">
     <div class="container container--small">
       <h1 class="page-header__title">Help</h1>
       <p class="page-header__description">Explore our help videos  to learn how to use the system </p>
@@ -52,7 +52,7 @@
           </header>
           <div class="collapse__content">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum exercitationem aut maiores officiis inventore architecto error incidunt aliquam animi ipsa, consequuntur cum quo harum voluptas odio delectus quisquam laboriosam facilis?</p>
-            <!-- TODO: video  -->
+            <iframe src="https://player.vimeo.com/video/160730254" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
           </div>
         </article>
 
