--- a/src/instructor.html
+++ b/src/instructor.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>OLS - Instructors</title>
+  <title>OLS - Instructor</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <section class="profile-view">
+  <section class="profile-view page-header">
     <div class="container container--small">
       <div class="row">
         <div class="col-md-8 col-sm-12 col-xs-12">
