--- a/src/profile.html
+++ b/src/profile.html
@@ -35,7 +35,7 @@
     </div>
   </header>
 
-  <section class="profile-view">
+  <section class="profile-view page-header">
     <div class="container container--small">
       <div class="row">
         <div class="col-md-6 col-sm-9 col-xs-12">
